--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -133,7 +133,7 @@ h3 {
 /* VIDEO DE PRESENTACIÓN*/
 .sec__video {
     width: 100%;
-    height: 250px;
+    max-height: 450px;
     overflow: hidden;
 }
 
@@ -148,7 +148,9 @@ h3 {
 /* TEXTO DE BIENVENIDA*/
 
 .bienvenida {
-    width: auto;
+    position: relative;
+    width: 500px;
+    left: -15%;
     padding: 15px;
 }
 
@@ -346,6 +348,9 @@ footer {
     }
 
     .bienvenida {
+        position: relative;
+        width: auto;
+        left: 0%;
         text-align: justify;
     }
 
