--- a/css/estilo_videos.css
+++ b/css/estilo_videos.css
@@ -95,7 +95,7 @@ body {
 
 iframe {
     max-width: 100%;
-    min-height: 100%;
+    min-height: 480px;
 }
 
 /*PIE DE PÁGINA*/
@@ -124,6 +124,8 @@ footer {
 .colon img {
     width: 50px;
 }
+
+/*Responsive*/
 @media screen and (max-width: 992px) {}
 
 .contenedor {
@@ -185,6 +187,6 @@ footer {
 }
 
 iframe {
-    max-width: 95%;
-    max-height: 50vh;
+    max-width: 90%;
+    height: auto;
 }
