--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -9,9 +9,9 @@
     --main-color-nav: #000;
     --main-color-nav-a: #fca311;
     --main-color-txt: #000;
-    --main-color-h2: #14213d;
-    --main-color-h3: #14213d;
-    --main-color-indicadores: #14213d;
+    --main-color-h2: #000;
+    --main-color-h3: #fca311;
+    --main-color-indicadores: #000;
 }
 
 /*
